--- a/hero-slider-style.css
+++ b/hero-slider-style.css
@@ -210,24 +210,24 @@ Single slide style
 }
 .cd-hero-slider li:first-of-type {
   background-color: #2c343b;
-  background-image: url("../img/[1].jpg");
+  background-image: url("./[1].jpg");
 }
 .cd-hero-slider li:nth-of-type(2) {
   background-color: #3d4952;
-  background-image: url("../img/[2].png");
+  background-image: url("./[2].png");
 }
 .cd-hero-slider li:nth-of-type(3) {
   background-color: #586775;
-  background-image: url("../img/[3].png");
+  background-image: url("./[3].png");
 }
 .cd-hero-slider li:nth-of-type(4) {
   background-color: #2c343b;
-  background-image:url(../img/%5B4%5D.jpg)
-  /*background-image: url("../assets/video-replace-mobile.jpg");*/
+  background-image:url(./[4].jpg)
+  /*background-image: url("./video-replace-mobile.jpg");*/
 }
 .cd-hero-slider li:nth-of-type(5) {
   background-color: #2c343b;
-  background-image: url(../img/[5].png);
+  background-image: url(./[5].png);
 }
 .cd-hero-slider .cd-full-width,
 .cd-hero-slider .cd-half-width {
