--- a/hero-slider-style.css
+++ b/hero-slider-style.css
@@ -210,7 +210,7 @@ Single slide style
 }
 .cd-hero-slider li:first-of-type {
   background-color: #2c343b;
-  background-image: url("./%5B1%5D.jpg");
+  background-image: url("./[1].jpg");
 }
 .cd-hero-slider li:nth-of-type(2) {
   background-color: #3d4952;
